# RESEARCH-AND-APPLICATION-OF-ARM-MICROPROCESSOR-ON-SOC-PLATFORM-FOR-FACE-RECOGNITION-

./: README.md
Tài liệu Boot Linux/: DE10_Standard_LXDE_readme.txt  readme.txt
src/data/: data.cpp
src/face recognize/: CMakeLists.txt  facere.cpp
src/trainer/: CMakeLists.txt  trainer LN Opencv 3.2.0.cpp
